--- a/hw/configs/ATmega2560_Serial/Makefile
+++ b/hw/configs/ATmega2560_Serial/Makefile
@@ -1,8 +1,8 @@
 # HW Farm project (c) Dmitry Grigoryev, 2020
 # Released under the terms of GNU AGPLv3
 
-BOARD_TAG = mega2560
-DEVICE_PATH = $(UART)
-OBJDIR = build
+BOARD_TAG=mega2560
+MONITOR_PORT=$(UART)
+OBJDIR=build
 USER_LIB_PATH=../../libraries
 include /usr/share/arduino/Arduino.mk
