Added resume session option, removed unsafe exec calls

--- a/hw/configs/ATmega2560_Serial/Makefile
+++ b/hw/configs/ATmega2560_Serial/Makefile
@@ -1,8 +1,15 @@
 # HW Farm project (c) Dmitry Grigoryev, 2020
 # Released under the terms of GNU AGPLv3
 
+# Makefile for a given HW Farm board configuration.
+
+# Additional useful configuration variables:
+#  ARDUINO_DIR - path to a custom Arduino IDE location
+#  USER_LIB_PATH - path to additional libraries location
+#  ARDMK_VENDOR - name of a third party board package, e.g. "teensy"
+
+
 BOARD_TAG=mega2560
 MONITOR_PORT=$(UART)
 OBJDIR=build
-USER_LIB_PATH=../../libraries
 include /usr/share/arduino/Arduino.mk
