--- a/hw/hwfarm.conf
+++ b/hw/hwfarm.conf
@@ -1,6 +1,8 @@
 # HW Farm project (c) Dmitry Grigoryev, 2020
 # Released under the terms of GNU AGPLv3
 
+# schroot configuration file, to be copied in /etc/schroot/chroot.d/
+
 [hwfarm]
 description=HW Farm compilation sandbox
 directory=/chroot/hwfarm
